I add referencesDTO into getContentsResultsByResultId now you can get the references on contentsresults controller